# onex

./: .gitignore  CMakeLists.txt  README.md  config.hpp.in  readline.h
cli/: CMakeLists.txt  Command.hpp  OnexCLI.cpp
cmake/: FindReadline.cmake
datasets/test/: test_10_20_space.txt  test_15_20_comma.csv  test_3_10_space.txt  test_3_11_space.txt  test_5_10_space.txt  test_group_5_10_different_space.txt  test_group_5_10_space.txt  test_text_only.txt  uneven_rows.txt  very_big_value.txt
scripts/preprocessing/: generate_groups_0.1.txt  generate_groups_0.2.txt  generate_groups_0.3.txt  generate_groups_0.4.txt  generate_groups_0.5.txt  normalize_data.txt
src/: CMakeLists.txt  Exception.hpp  GlobalGroupSpace.cpp  GlobalGroupSpace.hpp  Group.cpp  Group.hpp  GroupableTimeSeriesSet.cpp  GroupableTimeSeriesSet.hpp  LocalLengthGroupSpace.cpp  LocalLengthGroupSpace.hpp  OnexAPI.cpp  OnexAPI.hpp  README.md  TimeSeries.cpp  TimeSeries.hpp  TimeSeriesSet.cpp  TimeSeriesSet.hpp
src/distance/: Distance.cpp  Distance.hpp
src/lib/: deque.cpp  deque.h  trillionDTW.cpp  trillionDTW.h  util.cpp  util.h
test/: CMakeLists.txt  GlobalGroupSpaceTest.cpp  GroupableTimeSeriesSetTest.cpp  GroupsTest.cpp  LocalLengthGroupSpaceTest.cpp  OnexAPITest.cpp  TimeSeriesSetTest.cpp  TimeSeriesTest.cpp
test/distance/: DistanceTest.cpp
